retirado o botão de iniciar jogo

--- a/logica-js-projeto_inicial/logica-js-projeto_inicial/style.css
+++ b/logica-js-projeto_inicial/logica-js-projeto_inicial/style.css
@@ -65,7 +65,7 @@ body::before {
    /* position: absolute; /* Faz o botão flutuar sobre a tela */
    /* bottom: 20px; /* Ajuste a posição do botão para estar mais baixo */
    /* width: 100%; /* Garante que ocupe toda a largura da container */
-}
+/*}
 
 /*.container__botao {
     border-radius: 16px;
@@ -92,19 +92,19 @@ body::before {
     /*border-radius: 5px; /* Borda arredondada */
     /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
     /*transition: background-color 0.3s ease, transform 0.2s ease; /* Animação suave para hover */
-}
+/*}
 
 /* Efeito de hover no botão */
 /* #start-button:hover {
     background-color: #45a049; /* Cor mais escura quando o botão é "hovered" */
     //* transform: scale(1.05); /* Um efeito de aumento no botão */
-}
+/*}
 
 /* Efeito de clique no botão */
 /*#start-button:active {
     background-color: #3e8e41; /* Cor ainda mais escura quando o botão é clicado */
   /*  transform: scale(0.95); /* Efeito de clique (botão se "contrai") */
-}
+/*}
 
 /* Estilo do texto */
 .container__texto {
